Fixing the status code 404 Page Not found that @page "/featured-product" Seed Product Data in ApplicationDBContext and Upload Products data sql script.

--- a/OnlineStoreServer/Components/Shared/FeaturedProductPage.razor
+++ b/OnlineStoreServer/Components/Shared/FeaturedProductPage.razor
@@ -1,4 +1,6 @@
-﻿@implements IDisposable
+﻿@page "/featured-product"
+
+@implements IDisposable
 
 <!-- Featured Product Start -->
     <div class="featured-product product">
