--- a/OnlineStoreServer/Components/Shared/RecentProductPage.razor
+++ b/OnlineStoreServer/Components/Shared/RecentProductPage.razor
@@ -1,158 +1,171 @@
-﻿<div class="container-fluid p-0 mb-5">
-    <!-- Recent Product Start -->
-    <div class="recent-product product">
-        <div class="container-fluid">
-            <div class="section-header">
-                <h1>Recent Product</h1>
-            </div>
-            <div class="row align-items-center product-slider product-slider-4">
-                <div class="col-lg-3">
-                    <div class="product-item">
-                        <div class="product-title">
-                            <a href="#">Product Name</a>
-                            <div class="ratting">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                            </div>
-                        </div>
-                        <div class="product-image">
-                            <a href="product-detail.html">
-                                <img src="img/product-6.jpg" alt="Product Image">
-                            </a>
-                            <div class="product-action">
-                                <a href="#"><i class="fa fa-cart-plus"></i></a>
-                                <a href="#"><i class="fa fa-heart"></i></a>
-                                <a href="#"><i class="fa fa-search"></i></a>
-                            </div>
-                        </div>
-                        <div class="product-price">
-                            <h3><span>$</span>99</h3>
-                            <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Buy Now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="product-item">
-                        <div class="product-title">
-                            <a href="#">Product Name</a>
-                            <div class="ratting">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                            </div>
-                        </div>
-                        <div class="product-image">
-                            <a href="product-detail.html">
-                                <img src="img/product-7.jpg" alt="Product Image">
-                            </a>
-                            <div class="product-action">
-                                <a href="#"><i class="fa fa-cart-plus"></i></a>
-                                <a href="#"><i class="fa fa-heart"></i></a>
-                                <a href="#"><i class="fa fa-search"></i></a>
-                            </div>
-                        </div>
-                        <div class="product-price">
-                            <h3><span>$</span>99</h3>
-                            <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Buy Now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="product-item">
-                        <div class="product-title">
-                            <a href="#">Product Name</a>
-                            <div class="ratting">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                            </div>
-                        </div>
-                        <div class="product-image">
-                            <a href="product-detail.html">
-                                <img src="img/product-8.jpg" alt="Product Image">
-                            </a>
-                            <div class="product-action">
-                                <a href="#"><i class="fa fa-cart-plus"></i></a>
-                                <a href="#"><i class="fa fa-heart"></i></a>
-                                <a href="#"><i class="fa fa-search"></i></a>
-                            </div>
-                        </div>
-                        <div class="product-price">
-                            <h3><span>$</span>99</h3>
-                            <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Buy Now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="product-item">
-                        <div class="product-title">
-                            <a href="#">Product Name</a>
-                            <div class="ratting">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                            </div>
-                        </div>
-                        <div class="product-image">
-                            <a href="product-detail.html">
-                                <img src="img/product-9.jpg" alt="Product Image">
-                            </a>
-                            <div class="product-action">
-                                <a href="#"><i class="fa fa-cart-plus"></i></a>
-                                <a href="#"><i class="fa fa-heart"></i></a>
-                                <a href="#"><i class="fa fa-search"></i></a>
-                            </div>
-                        </div>
-                        <div class="product-price">
-                            <h3><span>$</span>99</h3>
-                            <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Buy Now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="product-item">
-                        <div class="product-title">
-                            <a href="#">Product Name</a>
-                            <div class="ratting">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                            </div>
-                        </div>
-                        <div class="product-image">
-                            <a href="product-detail.html">
-                                <img src="img/product-10.jpg" alt="Product Image">
-                            </a>
-                            <div class="product-action">
-                                <a href="#"><i class="fa fa-cart-plus"></i></a>
-                                <a href="#"><i class="fa fa-heart"></i></a>
-                                <a href="#"><i class="fa fa-search"></i></a>
-                            </div>
-                        </div>
-                        <div class="product-price">
-                            <h3><span>$</span>99</h3>
-                            <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Buy Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Recent Product End -->
-</div>
+﻿@page "/recent-product"
 
+@implements IDisposable
+
+
+<!-- Recent Product Start -->
+<div class="recent-product product">
+    <div class="container-fluid">
+        <div class="section-header">
+            <h1>Recent Product</h1>
+        </div>
+        @if (ProductService.FeaturedProducts is not null)
+        {
+            <div class="row align-items-center product-slider product-slider-4">
+                <!--Product Item Start-->
+                @for (int i = 0; i < ProductService.FeaturedProducts.Count(); i += 4)
+                {
+                    @foreach (Product product in ProductService.FeaturedProducts.Skip(i).Take(4))
+                    {
+                        @if (product.DateUploaded.AddDays(30) > DateTime.Now)
+                        {
+                            <div class="col-lg-3">
+                                <div class="product-item">
+                                    <div class="product-title">
+                                        <a style="cursor:pointer" href="/product-list/@product.Id">@product.Name</a>
+                                        <sub style="font-family:'Courier New'">
+                                            <span class="badge rounded-pill bg-primary fs-6">@(GetNewLabel(product.DateUploaded))</span>
+                                            <span class="p-1 top-0 start-100 translate-middle badge rounded-pill bg-danger" style="font-family:sans serif; font-size:11px;">
+                                                @((product.Quantity - 1) > 0 ? $"{product.Quantity - 1}+" : product.Quantity)
+                                                <span class="visually-hidden">unread messages</span>
+                                            </span>
+                                        </sub>
+                                        <div class="ratting">
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                        </div>
+                                    </div>
+                                    <div class="product-image">
+                                        <a href="/product-list/@product.Id">
+                                            @if (!string.IsNullOrEmpty(product.Base64Img))
+                                            {
+                                                <img src="@product.Base64Img" alt="@product.Name">
+                                            }
+                                            else if (product.Base64Img!.Count() > 0)
+                                            {
+                                                <img src="@product.Base64Img" alt="@product.Name">
+                                            }
+                                        </a>
+                                        <div class="product-action">
+                                            <a href="#"><i class="fa fa-cart-plus"></i></a>
+                                            <a href="#"><i class="fa fa-heart"></i></a>
+                                            <a href="#"><i class="fa fa-search"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="product-price">
+                                        <h3><span>$</span>@product.Price<span class="text-muted badge rounded-pill bg-light fs-6">$149</span></h3>
+                                        <a class="btn fw-bold" href="#"><i class="fa fa-shopping-cart"></i>Buy Now</a>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                        else if (product.DateUploaded.AddDays(30) < DateTime.Now)
+                        {
+                            <div class="col-lg-3">
+                                <div class="product-item">
+                                    <div class="product-title">
+                                        <a style="cursor:pointer" href="/product-list/@product.Id">@product.Name</a>
+                                        <sub style="font-family:'Courier New'">
+                                            <span class="badge rounded-pill bg-primary fs-6">@(GetNewLabel(product.DateUploaded))</span>
+                                            <span class="p-1 top-0 start-100 translate-middle badge rounded-pill bg-danger" style="font-family:sans serif; font-size:11px;">
+                                                @((product.Quantity - 1) > 0 ? $"{product.Quantity - 1}+" : product.Quantity)
+                                                <span class="visually-hidden">unread messages</span>
+                                            </span>
+                                        </sub>
+                                        <div class="ratting">
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                        </div>
+                                    </div>
+                                    <div class="product-image">
+                                        <a href="/product-list/@product.Id">
+                                            @if (!string.IsNullOrEmpty(product.Base64Img))
+                                            {
+                                                <img src="@product.Base64Img" alt="@product.Name">
+                                            }
+                                            else if (product.Base64Img!.Count() > 0)
+                                            {
+                                                <img src="@product.Base64Img" alt="@product.Name">
+                                            }
+                                        </a>
+                                        <div class="product-action">
+                                            <a href="#"><i class="fa fa-cart-plus"></i></a>
+                                            <a href="#"><i class="fa fa-heart"></i></a>
+                                            <a href="#"><i class="fa fa-search"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="product-price">
+                                        <h3><span>$</span>@product.Price<span class="text-muted badge rounded-pill bg-light fs-6">$149</span></h3>
+                                        <a class="btn fw-bold" href="#"><i class="fa fa-shopping-cart"></i>Buy Now</a>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="alert bg-danger alert-danger"><h3><strong>Products ran out of stock.</strong></h3></div>
+                        }
+                    }
+                }
+                <!--Product Item End-->
+            </div>
+            <!--Edned Loop of FeaturedProductList-->
+        }
+        else
+        {
+            <div class="alert alert-info">No Featured Products available.</div>
+        }
+    </div>
+</div>
+<!-- Recent Product End -->
+
+<MessageDialog @ref="messageDialogService.messageDialog"></MessageDialog>
 
 @code {
+    List<Product>? RecentFeaturedProducts = new();
+    protected override async Task OnInitializedAsync()
+    {
+        bool featured = true;
+        await ClientServices.GetAllProducts(featured);
+        ClientServices.ProductAction += StateHasChanged;
+        messageDialogService.Action += StateHasChanged;
+    }
 
+    private async Task RetrieveFeaturedProducts()
+    {
+        RecentFeaturedProducts?.Clear();
+        bool featured = true;
+        await ClientServices.GetAllProducts(featured);
+        RecentFeaturedProducts = ClientServices.FeaturedProducts;
+    }
+
+    string GetNewLabel(DateTime dataUpload)
+    {
+        int maxDays = 30;
+        int productDateAfterUploaded = (DateTime.Now - dataUpload).Days;
+        return productDateAfterUploaded <= maxDays ? "New" : null!;
+    }
+
+    private void DisplayResponse(ServiceResponse serviceResponse)
+    {
+        if (serviceResponse.Flag)
+            messageDialogService.messageDialog!.SetDialogValues("Success", serviceResponse.Message);
+        else
+            messageDialogService.messageDialog!.SetDialogValues("Warning", serviceResponse.Message);
+
+        messageDialogService.SetMessageDialog();
+
+    }
+
+    public void Dispose()
+    {
+        ClientServices.ProductAction -= StateHasChanged;
+        messageDialogService.Action -= StateHasChanged;
+    }
 }
