--- a/OnlineStoreServer/Components/Shared/MainSliderPage.razor
+++ b/OnlineStoreServer/Components/Shared/MainSliderPage.razor
@@ -1,85 +1,97 @@
 ﻿<div class="container-fluid p-0 mb-5">
-</div>
-<!-- Main Slider Start -->
-<div class="header">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-3">
-                <nav class="navbar bg-light">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa fa-home"></i>Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa fa-shopping-bag"></i>Best Selling</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa fa-plus-square"></i>New Arrivals</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa fa-female"></i>Fashion & Beauty</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa fa-child"></i>Kids & Babies Clothes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa fa-tshirt"></i>Men & Women Clothes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa fa-mobile-alt"></i>Gadgets & Accessories</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa fa-microchip"></i>Electronics & Accessories</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="col-md-6">
-                <div class="header-slider normal-slider">
-                    <div class="header-slider-item">
-                        <img src="img/slider-1.jpg" alt="Slider Image" />
-                        <div class="header-slider-caption">
-                            <p>Some text goes here that describes the image</p>
-                            <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Shop Now</a>
+    <!-- Main Slider Start -->
+    <div class="header">
+        <div class="container-fluid">
+            <div class="row">
+                <!--Show Navbar on the left side -->
+                <div class="col-md-3">
+                    <nav class="navbar bg-light">
+                        <div class="navbar-nav">
+                            <div class="nav-item">
+                                <NavLink class="nav-link" href="" Match="NavLinkMatch.All"><i class="fa fa-home"></i>Home</NavLink>
+                            </div>
+                            <div class="nav-item">
+                                <NavLink class="nav-link" href="best-selling"><i class="fa fa-shopping-bag"></i>Best Selling</NavLink>
+                            </div>
+                            <div class="nav-item">
+                                <NavLink class="nav-link" href="new-arrivals"><i class="fa fa-plus-square"></i>New Arrivals</NavLink>
+                            </div>
+                            <div class="nav-item">
+                                <NavLink class="nav-link" href="#"><i class="fa fa-female"></i>Fashion & Beauty</NavLink>
+                            </div>
+                            <div class="nav-item">
+                                <NavLink class="nav-link" href="#"><i class="fa fa-child"></i>Kids & Babies Clothes</NavLink>
+                            </div>
+                            <div class="nav-item">
+                                <NavLink class="nav-link" href="#"><i class="fa fa-tshirt"></i>Men & Women Clothes</NavLink>
+                            </div>
+                            <div class="nav-item">
+                                <a class="nav-link" href="#"><i class="fa fa-mobile-alt"></i>Gadgets & Accessories</a>
+                            </div>
+                            <div class="nav-item">
+                                <NavLink class="nav-link" href="#"><i class="fa fa-microchip"></i>Electronics & Accessories</NavLink>
+                            </div>
                         </div>
-                    </div>
-                    <div class="header-slider-item">
-                        <img src="img/slider-2.jpg" alt="Slider Image" />
-                        <div class="header-slider-caption">
-                            <p>Some text goes here that describes the image</p>
-                            <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Shop Now</a>
+                    </nav>
+                </div>
+                <!--Show Navbar on the left side End -->
+                <!--Show Slider in the middle Front Page -->
+                <div class="col-md-6">
+                    <div class="header-slider normal-slider">
+                        <div class="header-slider-item">
+                            <img src="img/slider-1.jpg" alt="Slider Image" />
+                            <div class="header-slider-caption">
+                                <p>Some text goes here that describes the image</p>
+                                <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Shop Now</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="header-slider-item">
-                        <img src="img/slider-3.jpg" alt="Slider Image" />
-                        <div class="header-slider-caption">
-                            <p>Some text goes here that describes the image</p>
-                            <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Shop Now</a>
+                        <div class="header-slider-item">
+                            <img src="img/slider-2.jpg" alt="Slider Image" />
+                            <div class="header-slider-caption">
+                                <p>Some text goes here that describes the image</p>
+                                <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Shop Now</a>
+                            </div>
+                        </div>
+                        <div class="header-slider-item">
+                            <img src="img/slider-3.jpg" alt="Slider Image" />
+                            <div class="header-slider-caption">
+                                <p>Some text goes here that describes the image</p>
+                                <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Shop Now</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-3">
-                <div class="header-img">
-                    <div class="img-item">
-                        <img src="img/category-1.jpg" />
-                        <a class="img-text" href="">
-                            <p>Some text goes here that describes the image</p>
-                        </a>
-                    </div>
-                    <div class="img-item">
-                        <img src="img/category-2.jpg" />
-                        <a class="img-text" href="">
-                            <p>Some text goes here that describes the image</p>
-                        </a>
+                <!--Show Slider in the middle Front Page End -->
+                <!--Show Images on the right side -->
+                <div class="col-md-3">
+                    <div class="header-img">
+                        <div class="img-item">
+                            <img src="img/category-1.jpg" />
+                            <a class="img-text" href="">
+                                <p>Some text goes here that describes the image</p>
+                            </a>
+                        </div>
+                        <div class="img-item">
+                            <img src="img/category-2.jpg" />
+                            <a class="img-text" href="">
+                                <p>Some text goes here that describes the image</p>
+                            </a>
+                        </div>
                     </div>
                 </div>
+                <!--Show Images on the right side End -->
             </div>
         </div>
     </div>
+    <!-- Main Slider End -->
 </div>
-<!-- Main Slider End -->
 
 @code {
+    private bool collapseNavMenu = true;
+    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
+    private void ToggleNavMenu()
+    {
+        collapseNavMenu = !collapseNavMenu;
+    }
 }
