--- a/OnlineStoreServer/Components/Shared/MainSliderPage.razor
+++ b/OnlineStoreServer/Components/Shared/MainSliderPage.razor
@@ -1,4 +1,5 @@
-﻿<div class="container-fluid p-0 mb-5">
+﻿@page "/category-list/{CategorySlug}/{categoryId:int}"
+<div class="container-fluid p-0 mb-5">
     <!-- Main Slider Start -->
     <div class="header">
         <div class="container-fluid">
@@ -6,32 +7,24 @@
                 <!--Show Navbar on the left side -->
                 <div class="col-md-3">
                     <nav class="navbar bg-light">
-                        <div class="navbar-nav">
-                            <div class="nav-item">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
                                 <NavLink class="nav-link" href="" Match="NavLinkMatch.All"><i class="fa fa-home"></i>Home</NavLink>
-                            </div>
-                            <div class="nav-item">
+                            </li>
+                            <li class="nav-item">
                                 <NavLink class="nav-link" href="best-selling"><i class="fa fa-shopping-bag"></i>Best Selling</NavLink>
-                            </div>
-                            <div class="nav-item">
+                            </li>
+                            <li class="nav-item">
                                 <NavLink class="nav-link" href="new-arrivals"><i class="fa fa-plus-square"></i>New Arrivals</NavLink>
-                            </div>
-                            <div class="nav-item">
-                                <NavLink class="nav-link" href="#"><i class="fa fa-female"></i>Fashion & Beauty</NavLink>
-                            </div>
-                            <div class="nav-item">
-                                <NavLink class="nav-link" href="#"><i class="fa fa-child"></i>Kids & Babies Clothes</NavLink>
-                            </div>
-                            <div class="nav-item">
-                                <NavLink class="nav-link" href="#"><i class="fa fa-tshirt"></i>Men & Women Clothes</NavLink>
-                            </div>
-                            <div class="nav-item">
-                                <a class="nav-link" href="#"><i class="fa fa-mobile-alt"></i>Gadgets & Accessories</a>
-                            </div>
-                            <div class="nav-item">
-                                <NavLink class="nav-link" href="#"><i class="fa fa-microchip"></i>Electronics & Accessories</NavLink>
-                            </div>
-                        </div>
+                            </li>
+                            @foreach (var category in _categories)
+                            {
+                                var categoryUrl = $"/category-list/{category.Slug}";
+                                <li class="nav-item">
+                                    <NavLink class="nav-link" href="@categoryUrl"><i class="@category.IconCSS"></i>@category.Name</NavLink>
+                                </li>
+                            }
+                        </ul>
                     </nav>
                 </div>
                 <!--Show Navbar on the left side End -->
@@ -87,11 +80,31 @@
 </div>
 
 @code {
-    private bool collapseNavMenu = true;
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    [Parameter]
+    public string CategorySlug { get; set; }
 
-    private void ToggleNavMenu()
+    private Category[] _categories = [];
+
+    private const int MaxProductCategoriesToShowMenuOnNavBar = 5;
+
+    public string? ErrorMessage { get; set; }
+
+    protected override async Task OnInitializedAsync()
     {
-        collapseNavMenu = !collapseNavMenu;
+        try
+        {
+            var categories = await CategoryService.GetCategoriesAsync();
+            _categories = categories.Where(c => c.ShowOnMenuNavBar)
+                            .Take(MaxProductCategoriesToShowMenuOnNavBar)
+                            .ToArray();
+            if (_categories.Length < MaxProductCategoriesToShowMenuOnNavBar)
+            {
+                _categories = [.. _categories, .. categories.Where(c => !c.ShowOnMenuNavBar).Take(MaxProductCategoriesToShowMenuOnNavBar - _categories.Length)];
+            }
+        }
+        catch (Exception ex)
+        {
+            ErrorMessage = ex.Message;
+        }
     }
 }
